// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ResponsiveImage Adds a focus point 1`] = `
<img
  alt="Alt Text"
  class="qt-image"
  src="//images.assettype.com/somepublisher%2Fimage.png?rect=0%2C0%2C759%2C427&w=640"
  srcset="//images.assettype.com/somepublisher%2Fimage.png?rect=0%2C0%2C759%2C427&w=320 320w,//images.assettype.com/somepublisher%2Fimage.png?rect=0%2C0%2C759%2C427&w=640 640w,//images.assettype.com/somepublisher%2Fimage.png?rect=0%2C0%2C759%2C427&w=1024 1024w"
/>
`;

exports[`ResponsiveImage Checks for a gumlet image 1`] = `
<img
  alt="Alt Text"
  class="qt-image"
  data-src="https://images.assettype.com/somepublisher%2Fimage.png?rect=0%2C0%2C759%2C427"
  src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
/>
`;

exports[`ResponsiveImage Does not add a rect param if the focus point is missing 1`] = `
<img
  alt="Alt Text"
  class="qt-image"
  src="//images.assettype.com/somepublisher%2Fimage.png?w=640"
  srcset="//images.assettype.com/somepublisher%2Fimage.png?w=320 320w,//images.assettype.com/somepublisher%2Fimage.png?w=640 640w,//images.assettype.com/somepublisher%2Fimage.png?w=1024 1024w"
/>
`;
